- Added main.cc to compile - Added definition for gcc to compile C++11

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,7 @@ set(SOURCES
 				database.cc
 				league.cc
 				manager.cc
+				main.cc
 				player.cc
 				team.cc
 )
@@ -13,7 +14,7 @@ find_package(LibXml2 REQUIRED)
 find_package(ClanLib REQUIRED)
 
 if(ClanLib_FOUND)
-				ADD_DEFINITIONS(-DUSE_CLANLIB -I/usr/include/ClanLib-2.3 -I/usr/local/include/ClanLib-2.3)
+				ADD_DEFINITIONS(-std=c++0x -DUSE_CLANLIB -I/usr/include/ClanLib-2.3 -I/usr/local/include/ClanLib-2.3)
 				FIND_LIBRARY(libfreetype SHARED)
 				FIND_LIBRARY(libfontconfig SHARED)
 else(ClanLib_FOUND)
@@ -34,6 +35,7 @@ link_libraries(${SQLITE3_LIBRARIES}
 								${LIBXML2_LIBRARIES}
 								-lfreetype
 								-lfontconfig
+								-lpthread
 								${ClanLib_LIBRARIES}
 )
 
